--- a/hirefront/package.json
+++ b/hirefront/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@chakra-ui/form-control": "^2.2.0",
     "@chakra-ui/react": "^3.19.1",
+    "@chakra-ui/system": "^2.6.2",
     "@chakra-ui/theme-tools": "^2.2.6",
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
