--- a/recruit/package.json
+++ b/recruit/package.json
@@ -46,6 +46,8 @@
     "date-fns": "^4.1.0",
     "embla-carousel-react": "^8.6.0",
     "framer-motion": "^12.15.0",
+    "i18next": "^25.2.1",
+    "i18next-browser-languagedetector": "^8.1.0",
     "input-otp": "^1.4.2",
     "lucide-react": "^0.511.0",
     "next-themes": "^0.4.6",
@@ -53,7 +55,9 @@
     "react-day-picker": "^8.10.1",
     "react-dom": "^19.1.0",
     "react-hook-form": "^7.56.4",
+    "react-i18next": "^15.5.2",
     "react-resizable-panels": "^3.0.2",
+    "react-router-dom": "^7.6.1",
     "recharts": "^2.15.3",
     "sonner": "^2.0.4",
     "tailwind-merge": "^3.3.0",
