--- a/recruit/package.json
+++ b/recruit/package.json
@@ -56,12 +56,14 @@
     "react-dom": "^19.1.0",
     "react-hook-form": "^7.56.4",
     "react-i18next": "^15.5.2",
+    "react-particles": "^2.12.2",
     "react-resizable-panels": "^3.0.2",
     "react-router-dom": "^7.6.1",
     "recharts": "^2.15.3",
     "sonner": "^2.0.4",
     "tailwind-merge": "^3.3.0",
     "tailwindcss-animate": "^1.0.7",
+    "tsparticles": "^3.8.1",
     "vaul": "^1.1.2",
     "zod": "^3.25.46"
   },
