--- a/recruit/package.json
+++ b/recruit/package.json
@@ -49,6 +49,7 @@
     "i18next": "^25.2.1",
     "i18next-browser-languagedetector": "^8.1.0",
     "input-otp": "^1.4.2",
+    "jwt-decode": "^4.0.0",
     "lucide-react": "^0.511.0",
     "next-themes": "^0.4.6",
     "react": "^19.1.0",
@@ -65,7 +66,8 @@
     "tailwindcss-animate": "^1.0.7",
     "tsparticles": "^3.8.1",
     "vaul": "^1.1.2",
-    "zod": "^3.25.46"
+    "zod": "^3.25.46",
+    "zustand": "^5.0.5"
   },
   "devDependencies": {
     "@eslint/js": "^9.25.0",
