--- a/recruit/package.json
+++ b/recruit/package.json
@@ -57,6 +57,7 @@
     "react-dom": "^19.1.0",
     "react-hook-form": "^7.56.4",
     "react-i18next": "^15.5.2",
+    "react-icons": "^5.5.0",
     "react-particles": "^2.12.2",
     "react-resizable-panels": "^3.0.2",
     "react-router-dom": "^7.6.1",
