--- a/recruit/requirements.txt
+++ b/recruit/requirements.txt
@@ -1,87 +1,84 @@
 # Django and core dependencies
-Django==4.2.7
-django-allauth==0.57.0
-django-crispy-forms==2.1
-crispy-bootstrap5==0.7
-python-decouple==3.8
-dj-database-url==2.1.0
+Django
+django-allauth
+django-crispy-forms
+crispy-bootstrap5
+python-decouple
+dj-database-url
 
 # Database
-psycopg2-binary==2.9.9
-redis==5.0.1
-django-redis==5.4.0
+psycopg2-binary
+redis
+django-redis
 
 # AI and Machine Learning
-openai==1.3.5
-crewai==0.1.6
-langchain==0.0.340
-langchain-openai==0.0.2
-tiktoken==0.5.1
-numpy==1.24.3
-pandas==2.0.3
-scikit-learn==1.3.0
+openai
+crewai
+langchain
+langchain-openai
+tiktoken
+numpy
+pandas
+scikit-learn
 
 # Document Processing
-PyPDF2==3.0.1
-python-docx==0.8.11
-Pillow==10.1.0
-pytesseract==0.3.10
-opencv-python==4.8.1.78
+PyPDF2
+python-docx
+Pillow
+pytesseract
+opencv-python
 
 # Web scraping and HTTP
-requests==2.31.0
-beautifulsoup4==4.12.2
-selenium==4.15.2
+requests
+beautifulsoup4
+selenium
 
 # Task Queue
-celery==5.3.4
-django-celery-beat==2.5.0
-django-celery-results==2.5.1
+celery
+django-celery-beat
+django-celery-results
 
 # File handling and utilities
-python-magic==0.4.27
-Werkzeug==3.0.1
-python-dateutil==2.8.2
+python-magic
+Werkzeug
+python-dateutil
 
 # Email and notifications
-django-ses==3.5.0
+django-ses
 
 # Development and testing
-django-debug-toolbar==4.2.0
-pytest==7.4.3
-pytest-django==4.7.0
-factory-boy==3.3.0
-coverage==7.3.2
+django-debug-toolbar
+pytest
+pytest-django
+factory-boy
+coverage
 
 # Production
-gunicorn==21.2.0
-whitenoise==6.6.0
-sentry-sdk==1.38.0
+gunicorn
+whitenoise
+sentry-sdk
 
 # API and serialization
-djangorestframework==3.14.0
-django-cors-headers==4.3.1
-
+djangorestframework
+django-cors-headers
 # Security
-django-ratelimit==4.1.0
-django-axes==6.1.1
-
+django-ratelimit
+django-axes
 # Monitoring and logging
-structlog==23.2.0
-django-extensions==3.2.3
+structlog
+django-extensions
 
 # File storage
-boto3==1.34.0
-django-storages==1.14.2
+boto3
+django-storages
 
 # Image processing
-Pillow==10.1.0
-python-magic==0.4.27
-
+Pillow
+python-magic
 # Data validation
-marshmallow==3.20.1
-cerberus==1.3.5
+marshmallow
+cerberus
 
 # Utilities
-python-slugify==8.0.1
-pytz==2023.3
+python-slugify
+pytz
