--- a/.github/workflows/fastapi.yml
+++ b/.github/workflows/fastapi.yml
@@ -1,16 +1,59 @@
-            - name: github-action-auto-format
-  # You may pin to the exact commit or the version.
-  # uses: cloudposse/github-action-auto-format@970af4c15a720047204400fe5b5ae52fb2991e9b
-  uses: cloudposse/github-action-auto-format@v0.12.0
-  with:
-    # The path on the github-runner where the auto-format action scripts are checked out at runtime
-    actions-files-checkout-path: # optional, default is github-action-auto-format
-    # GitHub username for writing new commits
-    bot-name: # optional, default is cloudpossebot
-    # Email address associated with the GitHub user for writing new commits
-    bot-email: # optional
-    # Name of formatting task to execute. (Options include: readme, github, terraform, and context.)
-    format-task: 
-    # GitHub Token for use in `github_format.sh` and PR creation steps. This token must be granted `workflows` permissions.
-    workflow-token: 
-          
+name: "FastAPI OpenAPI Specs Generator"
+description: "Generates the OpenAPI specs file for a FastAPI project."
+branding:
+  icon: "target"
+  color: "green"
+
+inputs: 
+
+  installDependencies:
+    description: >
+      Command to use to install dependencies before running FastAPI application.
+      This command gets ran as a standard shell command.
+    default: "pip install -r requirements.txt"
+    required: false
+
+  moduleDir:
+    description: >
+      The directory in which the FastAPI Python app lives. 
+      This should be the first folder in your project with a '__init__.py' file.
+      Needed to do 'from project import app' in subsequent steps.
+    required: true
+
+  fileName:
+    description: >
+      The file in which your FastAPI application gets initialized from.
+    default: "main.py"
+    required: true
+
+  appName:
+    description: >
+      The name of the FastAPI object inside your '{moduleDir}/{fileName}.py'.
+      This is used to do 'from {moduleDir}.{fileName} import {appName}'.
+    default: "app"
+    required: true
+
+  fastapiVersioning:
+    description: >
+      Only use this if your application uses the 'fastapi-versioning' package.
+
+      If the 'fastapi-versioning' is being used each version of your application has its own 
+      individual FastAPI app that is ran in conjunction. This variable defines which FastAPI API 
+      to use to generate the client. Use the package's VersionedFastAPI.prefix_format string, 
+      something like 'v{number}' typically (e.g. 'v1').
+    default: null
+    required: false
+
+  outputName:
+    description: The name of the output file. Do not include extension.
+    default: "openapi"
+    required: true
+
+  outputExtension:
+    description: Output extension. May either be yaml or json.
+    default: "yaml"
+    required: true
+
+runs:
+  using: docker
+  image: Dockerfile
